<resources>
    <!-- app and activities names -->
    <string name="app_name">E-Scorer</string>
    <string name="title_activity_main_panel">Panel Główny</string>
    <string name="title_activity_goodbye">GoodbyeActivity</string>
    <string name="title_activity_create_account">Rejestracja</string>
    <string name="title_activity_match_settings">Ustawienia przedmeczowe</string>

    <!-- fragments names -->
    <string name="title_fragment_matches">Moje mecze</string>
    <string name="title_fragment_teams">Moje drużyny</string>
    <string name="title_fragment_tools">Ustawienia</string>
    <string name="title_fragment_user_data">Moje dane</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj lub zarejestruj</string>
    <string name="action_sign_in_short">Zaloguj</string>
    <string name="invalid_username">Niepoprawny login</string>
    <string name="invalid_password">Hasło musi mieć > 5 znaków</string>
    <string name="login_failed">"Błędne hasło lub login"</string>
    <string name="hint_login">E-mail</string>
    <string name="hint_password">Hasło</string>
    <string name="button_login">Zaloguj</string>
    <string name="button_signin">Zarejestruj</string>
    <string name="text_view_forgot_pwd">Nie pamiętasz hasła?</string>
    <string name="text_view_create_account">Nie masz jeszcze konta?</string>
    <string name="text_view_or">LUB</string>
    <string name="text_login_google">Zaloguj za pomocą google</string>

    <!-- Strings related to registration -->
    <string name="registration_text">Rejestracja</string>
    <string name="radio_text_account_referee">Konto sędziego</string>
    <string name="radio_text_account_organizer">Konto organizatora</string>
    <string name="hint_name">Imię</string>
    <string name="hint_surname">Nazwisko</string>
    <string name="hint_password_again">Powtórz hasło</string>
    <string name="hint_certificate">Numer certyfikatu</string>
    <string name="referee_classes_label">Klasa sędziowska</string>
    <string name="button_create_account">Utwórz</string>
    <string name="regis_text">Zarejestruj się</string>

    <!-- Strings related to main panel -->
    <string name="volleyball_card">PIŁKA HALOWA</string>
    <string name="bvolleyball_card">PIŁKA PLAŻOWA</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Panel Główny</string>
    <string name="menu_user_data">Moje dane</string>
    <string name="menu_matches">Moje mecze</string>
    <string name="menu_teams">Moje drużyny</string>
    <string name="menu_tools">Ustawienia</string>
    <string name="menu_logout">Wyloguj</string>
    <string name="menu_exit">Wyjście</string>
    <string name="menu_title">Systemowe</string>

    <!-- Strings related to goodbye  -->
    <string name="goodbye_msg">Do zobaczenia ;)</string>

    <!-- Strings related to welcome  -->
    <string name="app_full_name">electronic scorer sheet</string>
    <string name="app_name_electronic">elektroniczny</string>
    <string name="app_name_scoresheet">protokół</string>
    <string name="app_name_referee">sędziowski</string>

    <!-- Strings related to match settings  -->
    <string name="tab_text_host">Gospodarz</string>
    <string name="tab_text_guest">Gość</string>
    <string name="tab_text_rest">Opis</string>
    <string name="tab_text_rules">Zasady</string>

    <!-- ERRORS  -->
    <string name="get_user_info_error">Nie udało się pobrać danych użytkownika</string>

    <!-- RUNNING MATCH -->
    <string name="coach_list_label">Trenerzy</string>
    <string name="medicine_list_label">Masażyści</string>
    <string name="captain_label">Kapitan</string>
    <string name="libero_label">Libero</string>
    <string name="hint_player_number">Numer koszulki</string>
    <string name="menu_team_punish">Opóźnienie</string>
    <string name="menu_mem_punish">Zachowanie</string>
    <string name="punishment_warning">Ostrzeżenie</string>
    <string name="punishment_reminder">Upomnienie</string>
    <string name="punishment_punishment">Kara</string>
    <string name="punishment_exclusion">Wykluczenie</string>
    <string name="punishment_disqualification">Dyskwalifikacja</string>
    <string name="punishment_member_label">Wybierz osobę</string>
    <string name="punishment_label_punishment">Kara</string>
    <string name="hint_attentions">Wprowadź uwagi</string>
    <string name="label_attentions">Uwagi</string>
    <string name="label_attention">Uwaga</string>
    <string name="label_team_info">Informacje o zespołach</string>
    <string name="rest_label">Pozostali</string>
    <string name="title_summary">Podsumowanie</string>
    <string name="times">Czasy</string>
    <string name="points">Punkty</string>
    <string name="shifts">Zmiany</string>
    <string name="set">Set</string>
    <string name="label_generate_sheet">Generuj protokół</string>
    <string name="msg_attention">Czy jesteś pewny, że chcesz wrócić do panelu głównego?
        Wszystkie dane zostaną utracone.</string>
    <string name="no">NIE</string>
    <string name="yes">TAK</string>
    <string name="msg_generated_sheet">Protokół zapisano w</string>
    <string name="msg_attention_after_generate">Czy jesteś pewny, że chcesz wrócić do panelu głównego?
        Nie będziesz już mógł wysłać protokołu na serwer.</string>
    <string name="msg_succ_on_send_sheet">Wysłano protokół na serwer</string>
    <string name="msg_failed_on_send_sheet">Coś poszło nie tak z wysłaniem protokołu na serwer</string>
    <string name="save_button">Zapisz</string>
    <string name="label_error">Błąd</string>
    <string name="ok">OK</string>
    <string name="label_no_teams">Nie masz jeszcze drużyn.\n Utwórz nową.</string>
    <string name="label_no_matches">Nie masz jeszcze przeprowadzonych meczy.</string>
    <string name="label_new">Nowa</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="preferences_theme">Styl ciemny</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="label_go_to_draw">Przejście do losowania</string>
    <string name="msg_no_more_change">Wprowadzone dane nie będą mogły ulec zmianie, czy chcesz kontynuować?</string>
    <string name="label_choose_data_to_save">Wybierz co chcesz zapisać:</string>
    <string name="label_home_team">Drużynę gospodarzy</string>
    <string name="label_guest_team">Drużynę gości</string>
    <string name="label_configuration">Konfigurację meczu</string>
    <string name="preferences_new_name">Nazwa zasad</string>
    <string name="preferences_new_name_title">Wprowadź swoją nazwę</string>
    <string name="preferences_new_name_des">Własna nazwa dla wprowadzonych zasad</string>
    <string name="preferences_sets">Sety</string>
    <string name="preferences_points">Punkty</string>
    <string name="preferences_cat_general">Ogólne</string>
    <string name="preferences_cat_tiebreak">Tiebreak</string>
    <string name="preferences_tiebreak">Tiebreak w ostatnim secie</string>
    <string name="preferences_tiebreak_des_off">Nie można ustawić, ponieważ funkcja tiebreak jest wyłączona</string>
    <string name="preferences_tiebreak_des_on">Ilość potrzebnych punktów do wygrania tiebreaka</string>
    <string name="preferences_tiebreak_points">Punkty w tiebreaku</string>
    <string name="preferences_tiebreak_shift">Zmiana stron</string>
    <string name="preferences_tiebreak_shift_on">Zmiana stron drużyn w połowie seta</string>
    <string name="preferences_cat_times">Czas</string>
    <string name="preferences_punishments">Sankcje</string>
    <string name="preferences_sets_des">Ilość potrzebnych setów do wygrania meczu</string>
    <string name="preferences_points_des">Ilość potrzebnych punktów do wygrania seta</string>
    <string name="preferences_time">Przerwa na żądanie</string>
    <string name="preferences_time_duration">Długość przerwy</string>
    <string name="preferences_time_des_off">Nie można ustwić, ponieważ funkcja Przerwa na żądanie jest wyłączona</string>
    <string name="preferences_time_count">Ilość czasów w meczu</string>
    <string name="preferences_cat_theme">Wyświetlacz</string>
    <string name="out_confirm">Czy chcesz wyjść z aplikacji?</string>
    <string name="label_delete">USUŃ</string>
    <string name="players_label_counter">Zawodnicy:</string>
    <string name="liber_label_counter">W tym libero:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transition">transit</string>
</resources>
