<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:iconTintMode="screen"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_user_data"
            android:icon="@drawable/menu_user_data"
            android:title="@string/menu_user_data" />
        <item
            android:id="@+id/nav_matches"
            android:icon="@drawable/menu_matches"
            android:iconTint="@color/black"
            android:title="@string/menu_matches" />
        <item
            android:id="@+id/nav_teams"
            android:icon="@drawable/teams"
            android:iconTint="@color/black"
            android:iconTintMode="screen"
            android:title="@string/menu_teams" />
    </group>

    <item android:title="@string/menu_title">
        <menu>
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_tools" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/menu_exit"
                android:title="@string/menu_exit"
                android:onClick="onClickedExit"/>
        </menu>
    </item>

</menu>
