<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_choose_data_to_save"
        android:textSize="14sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBoxHome"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:checked="true"
        android:layoutDirection="rtl"
        android:text="@string/label_home_team" />

    <CheckBox
        android:id="@+id/checkBoxGuest"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layoutDirection="rtl"
        android:text="@string/label_guest_team" />

    <CheckBox
        android:id="@+id/checkBoxConf"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl"
        android:text="@string/label_configuration" />
</LinearLayout>