<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputNamePlayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/hint_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textNamePlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputSurnamePLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/hint_surname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textSurnamePLayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputNumberPlayer"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/hint_player_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textNumberPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="7dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchCaptain"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:checked="false"
            android:text="@string/captain_label" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchLibero"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/libero_label" />
    </LinearLayout>

</LinearLayout>