<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/app_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableRow
            android:id="@+id/imageRowPopUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:baselineAligned="false"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewReferee"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="top"
                    app:srcCompat="@drawable/referee" />

                <ImageView
                    android:id="@+id/imageViewOrganizer"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/boss" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroupAccountPopUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/radioButtonRefereePopUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_text_account_referee" />

                <RadioButton
                    android:id="@+id/radioButtonOrganizerPopUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/radio_text_account_organizer" />
            </RadioGroup>

        </TableRow>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputNamePopUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageRowPopUp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/hint_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textNamePopUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputSurnamePopUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textInputNamePopUp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/hint_surname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textSurnamePopUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputRefereeCerPopUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputSurnamePopUp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/hint_certificate"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textRefereeCerPopUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/labelRefereeClassPopUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputRefereeCerPopUp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/referee_classes_label"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/spinnerRefereeClassPopUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelRefereeClassPopUp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="15dp"
            android:entries="@array/refereeClasses"
            android:visibility="visible" />

    </RelativeLayout>
</ScrollView>